--- a/geral.css
+++ b/geral.css
@@ -14,3 +14,10 @@
     color: black;
     cursor: pointer;
 }
+
+.spResultado{
+    background: black;
+    color: yellow;
+    padding: 4px;
+    margin: 2px;
+}
